--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Contra</title>
   </head>
   <body>
-    <script src="/src/index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
