--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contra</title>
+    <div style="position: absolute; margin-left: 1300px">
+      <h1>Control:</h1>
+      <ul style="font-size: 30px">
+        Move left- arrow left
+        <br />
+        Move right- arrow right
+        <br />
+        Lay down- arrow down
+        <br />
+        Jump- button S
+        <br />
+        Fire- button A
+        <br />
+        Oblique fire- arrow up + arrow right/left
+      </ul>
+    </div>
   </head>
   <body>
     <script src="./src/index.js" type="module"></script>
